<resources>
    <string name="app_name">App Uninstaller</string>
    <string name="installed_apps">INSTALLED APPS</string>
    <string name="launch">ACTION</string>
    <string name="uninstall">UNINSTALL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_manager_uninstaller">App Manager - Uninstaller</string>
    <string name="delete">delete</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_size">Sort by Size</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="search">Search</string>
    <string name="app_uninstaller">App Uninstaller</string>
    <string name="selected_apps">Selected Apps</string>
    <string name="show_all">Show All</string>
    <string name="exit">Exit</string>
    <string name="refresh">Refresh</string>
</resources>