<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.stringsAttached.appunistaller.activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        app:titleTextColor="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_manager_uninstaller" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/installed_apps"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/sortingViewUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/sortingViewUp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        app:layout_goneMarginEnd="16dp"
        android:background="@drawable/baseline_arrow_upward_24"
        android:backgroundTint="#CDDC39"
        app:layout_constraintEnd_toStartOf="@id/sortingViewDown"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/sortingViewDown"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/baseline_arrow_downward_24"
        android:backgroundTint="#CDDC39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/sortingViewContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="sortingViewDown, sortingViewUp" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/memoryStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:tabIndicatorColor="#4CAF50"
            app:tabSelectedTextColor="#4CAF50"
            app:tabTextColor="@color/white" />
    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/delete"
        android:scaleType="center"
        android:src="@drawable/baseline_delete_24"
        app:backgroundTint="@color/white"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toTopOf="@id/memoryStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:paddingEnd="13dp"
        app:paddingStart="28dp" />

    <TextView
        android:id="@+id/memoryStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9C27B0"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintVertical_bias="1" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5063249550068137/8547379986"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/memoryStatus" />
</androidx.constraintlayout.widget.ConstraintLayout>